--- a/vc2013/ABP.vcxproj
+++ b/vc2013/ABP.vcxproj
@@ -114,7 +114,10 @@
   <ItemGroup>
     <ResourceCompile Include="Resources.rc" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <Xml Include="Debug\VDSettings.xml" />
+    <Xml Include="Release\VDSettings.xml" />
+  </ItemGroup>
   <ItemGroup />
   <ItemGroup>
     <ClInclude Include="..\include\ABPApp.h" />
